# lolhelper

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_initial.py  0002_extend_partitions.py  0003_unique_nulls_not_distinct.py  0004_default_partitions.py  0005_item_description.py  0006_refresh_tokens.py
backend/app/: __init__.py  deps.py  main.py  settings.py
backend/app/api/v1/: __init__.py  auth.py  meta.py  stats.py
backend/app/core/: google_oauth.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  augment_stat.py  crawl_state.py  ingest_audit.py  match.py  metadata_tables.py  refresh_token.py  summoner.py  user.py
backend/app/services/: community_dragon.py  opgg_link.py  stats_engine.py
backend/app/services/riot/: __init__.py  client.py  exceptions.py  rate_limiter.py
backend/app/utils/: match.py
backend/app/workers/: aggregate.py  crawl_arena.py  fetch_match.py  refresh_meta.py  seed_high_elo.py  settings.py
backend/scripts/: aggregate_once.py  crawl_once.py  refresh_metadata.py  seed_initial.py
backend/tests/: conftest.py
backend/tests/fixtures/: arena_match_min.json
backend/tests/unit/: test_match_parser.py  test_opgg_link.py  test_rate_limiter.py  test_settings.py  test_wilson.py
client/: electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.json
client/src/main/: index.ts
client/src/main/lcu/: lockfile-watcher.ts
client/src/overlay/: main.tsx  overlay.html
client/src/preload/: main-preload.ts  overlay-preload.ts
client/src/renderer/: App.tsx  main.html  main.tsx
docs/: architecture.md  deployment.md  next-steps.md  tos-compliance.md
docs/ADR/: 0001-monorepo-layout.md  0002-arq-over-celery.md  0003-wilson-score-ranking.md
frontend/: next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/arena/: page.tsx
frontend/src/app/arena/champions/: page.tsx
frontend/src/app/arena/champions/[champKey]/: page.tsx
frontend/src/app/arena/events/: page.tsx
frontend/src/app/arena/items/: page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/auth/login/: login-button.tsx  page.tsx
frontend/src/app/download/: page.tsx
frontend/src/app/mayhem/: page.tsx
frontend/src/components/: arena-tabs.tsx  augment-table.tsx  build-paths-table.tsx  champion-list.tsx  champion-sidebar.tsx  expandable-item-table.tsx  hover-tooltip.tsx  item-table.tsx  items-category-page.tsx  nav-user-menu.tsx  nav.tsx  page-tabs.tsx  rarity-selector.tsx  rarity-tag.tsx  stat-pill.tsx  synergy-table.tsx  tier-badge.tsx
frontend/src/lib/: api-client.ts  auth.ts  cdragon.ts  format.ts  item-category.ts  lol-text.ts  tier-order.ts
infra/: docker-compose.prod.yml  docker-compose.yml
infra/postgres/: init.sql
