[project]
name = "lolhelper-backend"
version = "0.1.0"
description = "LOL Helper backend API and workers"
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    # Web framework
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    # HTTP client
    "httpx[http2]>=0.28.0",
    "tenacity>=9.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.1",  # required by SQLAlchemy async
    # Redis / queue
    "redis[hiredis]>=5.2.0",
    "arq>=0.26.3",
    # Auth
    "authlib>=1.3.2",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.2.0",
    # Misc
    "structlog>=24.4.0",
    "python-multipart>=0.0.18",
    "orjson>=3.10.12",
    "email-validator>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.2",
    "mypy>=1.13.0",
    "types-redis>=4.6.0.20241004",
    "factory-boy>=3.3.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ASYNC", # flake8-async
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (fine in tests)
    "B008",  # function call in default arg (FastAPI Depends pattern)
    # 中文字串/註解被誤判為 ambiguous-unicode；本專案大量繁中為刻意
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B", "N"]  # 測試命名（test_x_is_S 等）不套 pep8-naming
"alembic/**" = ["E", "F", "I"]
# 統計引擎以 f-string 組裝 SQL，但插入的是內部常數片段，使用者輸入一律走 bound params → S608 為誤報
"app/api/v1/stats.py" = ["S608"]
"app/workers/aggregate.py" = ["S608"]
# settings 的預設值/哨兵常數（change_me_in_production）與 0.0.0.0 綁定為設定預設，非真實密鑰
"app/settings.py" = ["S105", "S104"]
# GOOGLE_TOKEN_URL 是公開 OAuth endpoint，變數名含 TOKEN 觸發 S105 → 誤報
"app/core/google_oauth.py" = ["S105"]
# Riot 例外子類以 HTTP 語意命名（基底已是 RiotError）；不強制 *Error 後綴
"app/services/riot/exceptions.py" = ["N818"]
# 框架的 class 級設定（SQLAlchemy DeclarativeBase / ARQ WorkerSettings），非每實例可變預設
"app/db/base.py" = ["RUF012"]
"app/workers/settings.py" = ["RUF012"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "tests/"]

[[tool.mypy.overrides]]
module = ["authlib.*", "arq.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
